thay doi h1 to h2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git & GitHu Tutorial</title>
 </head>
 <body>
-    <h1>10 lenh git co ban phai nen biet</h1>
+    <h2>10 lenh git co ban phai nen biet</h2>
+    <p>Huong dan chi tiet cach su dung Git co ban</p>
 </body>
 </html>
