--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>10 lenh git co ban phai nen biet</h2>
     <p>Huong dan chi tiet cach su dung Git co ban</p>
+    <span>Test Git Status</span>
 </body>
 </html>
