--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git & GitHu Tutorial</title>
 </head>
 <body>
+    <h1>Toi la Lam Xuan Hung</h1>
     <h2>10 lenh git co ban phai nen biet</h2>
     <p>Huong dan chi tiet cach su dung Git co ban</p>
     <span>Test Git Status</span>
